# version-update-workflow-sample

./: .gitignore  README.en.md  README.ja.md  README.md  pyproject.toml
.github/scripts/: update_version.sh
.github/workflows/: auto-update-version.yaml  docs.yaml  update-version-simple.yaml
docs/source/: conf.py  index.rst
scripts/: init_project.py
src/version_update_workflow_sample/: __init__.py
tests/: test_version_update_workflow_sample.py
tests/workflow/: test_workflow.py
